--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.58",
+    "@react-three/drei": "^7.17.2",
+    "@react-three/fiber": "^7.0.17",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
@@ -39,6 +41,7 @@
     "sharp": "^0.28.3",
     "smoothscroll-polyfill": "^0.4.4",
     "tailwindcss": "^2.2.2",
+    "three": "^0.133.1",
     "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
