--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.3",
+    "@next/eslint-plugin-next": "^12.0.3",
     "@svgr/webpack": "^5.5.0",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
-    "eslint": "^8.2.0",
+    "eslint": "^7.23.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
