--- a/package.json
+++ b/package.json
@@ -13,21 +13,16 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.72",
-    "@react-three/drei": "^7.20.0",
     "@react-three/fiber": "^7.0.18",
     "@react-three/postprocessing": "^2.0.5",
-    "@tailwindcss/forms": "^0.3.4",
-    "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.4.0",
     "esbuild": "^0.12.29",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
     "mdx-bundler": "^6.0.3",
-    "next": "12.0.3",
+    "next": "^12.0.3",
     "next-themes": "^0.0.15",
     "next-translate": "^1.2.0",
-    "postcss": "^8.3.11",
     "preact": "^10.5.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -41,18 +36,21 @@
     "remark-math": "^5.1.0",
     "sharp": "^0.29.2",
     "smoothscroll-polyfill": "^0.4.4",
-    "tailwindcss": "^2.2.19",
-    "three": "^0.134.0",
+    "three": "^0.135.0",
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "12.0.3",
+    "@next/bundle-analyzer": "^12.0.3",
     "@next/eslint-plugin-next": "^12.0.3",
+    "@react-three/drei": "^8.0.0",
     "@svgr/webpack": "^6.0.0-alpha.4",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
     "eslint": "^7.23.0",
-    "eslint-config-next": "12.0.3",
+    "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
@@ -62,7 +60,9 @@
     "inquirer": "^8.2.0",
     "lint-staged": "^12.0.0",
     "next-remote-watch": "^1.0.0",
-    "prettier": "2.4.1"
+    "postcss": "^8.4.4",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^3.0.1"
   },
   "engines": {
     "npm": ">=8.0.0",
