--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^12.0.3",
     "next-themes": "^0.0.15",
     "next-translate": "^1.2.0",
+    "postprocessing": "^6.23.3",
     "preact": "^10.5.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -36,7 +37,7 @@
     "remark-math": "^5.1.0",
     "sharp": "^0.29.2",
     "smoothscroll-polyfill": "^0.4.4",
-    "three": "^0.136.0",
+    "three": "^0.135.0",
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
