--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "preact": "^10.5.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-spring": "^9.4.1",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-katex": "^6.0.1",
