--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "esbuild": "^0.12.29",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
-    "image-size": "1.0.0",
-    "mdx-bundler": "^6.0.3",
+    "image-size": "1.0.1",
+    "mdx-bundler": "^8.0.1",
     "next": "^12.0.3",
     "next-themes": "^0.0.15",
     "next-translate": "^1.2.0",
-    "postprocessing": "^6.23.3",
     "preact": "^10.5.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-spring": "^9.4.1",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^6.1.0",
@@ -38,7 +38,7 @@
     "remark-math": "^5.1.0",
     "sharp": "^0.29.2",
     "smoothscroll-polyfill": "^0.4.4",
-    "three": "^0.135.0",
+    "three": "^0.136.0",
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
