feat: add context and animations

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
       "@/layouts/*": ["layouts/*"],
       "@/lib/*": ["lib/*"],
       "@/css/*": ["css/*"],
+      "@/context/*": ["context/*"],
       "@/*": ["/*"]
     }
   }
