--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build && node ./scripts/generate-sitemap",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
+    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts --dir context",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -21,9 +21,10 @@
     "image-size": "1.0.1",
     "mdx-bundler": "^8.0.1",
     "next": "^12.0.3",
+    "next-compose-plugins": "^2.2.1",
     "next-themes": "^0.0.15",
     "next-translate": "^1.2.0",
-    "preact": "^10.5.15",
+    "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
