--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.2",
   "private": true,
   "scripts": {
-    "start": "next-remote-watch ./data",
+    "start": "cross-env SOCKET=true node ./scripts/next-remote-watch.js ./data",
     "dev": "next dev",
     "build": "next build && node ./scripts/generate-sitemap",
     "serve": "next start",
@@ -65,6 +65,8 @@
     "next-remote-watch": "^1.0.0",
     "postcss": "^8.4.4",
     "prettier": "^2.4.1",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "tailwindcss": "^3.0.1"
   },
   "engines": {
