--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "remark-math": "^5.1.0",
     "sharp": "^0.29.2",
     "smoothscroll-polyfill": "^0.4.4",
+    "swr": "^1.1.2",
     "three": "^0.136.0",
     "unist-util-visit": "^4.1.0"
   },
