--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.0.15",
     "next-translate": "^1.2.0",
     "next-transpile-modules": "^9.0.0",
+    "postprocessing": "^6.23.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
