--- a/package.json
+++ b/package.json
@@ -54,11 +54,12 @@
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
-    "eslint": "^7.23.0",
+    "eslint": "^8.9.0",
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "file-loader": "^6.0.0",
     "globby": "11.0.3",
     "husky": "^7.0.4",
