--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.1",
-    "mdx-bundler": "^8.0.1",
+    "mdx-bundler": "^9.0.0",
     "mdx-embed": "^1.0.0",
     "next": "^12.0.9",
     "next-compose-plugins": "^2.2.1",
@@ -29,8 +29,8 @@
     "next-translate": "^1.2.0",
     "next-transpile-modules": "^9.0.0",
     "postprocessing": "^6.23.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-intersection-observer": "^8.33.1",
     "react-spring": "^9.4.1",
     "reading-time": "1.5.0",
@@ -51,6 +51,8 @@
     "@next/bundle-analyzer": "^12.0.3",
     "@next/eslint-plugin-next": "^12.0.3",
     "@react-three/drei": "^8.2.0",
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.1",
     "@svgr/webpack": "^6.0.0-alpha.4",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
@@ -77,7 +79,7 @@
   },
   "engines": {
     "npm": ">=8.0.0",
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
