--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "mdx-embed": "^1.0.0",
     "next": "^12.0.9",
     "next-compose-plugins": "^2.2.1",
-    "next-themes": "^0.0.15",
+    "next-themes": "^0.2.0",
     "next-translate": "^1.2.0",
     "next-transpile-modules": "^9.0.0",
     "postprocessing": "^6.23.5",
@@ -51,10 +51,10 @@
     "@next/bundle-analyzer": "^12.0.3",
     "@next/eslint-plugin-next": "^12.0.3",
     "@react-three/drei": "^8.2.0",
-    "@types/react": "18.0.5",
-    "@types/react-dom": "18.0.1",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@svgr/webpack": "^6.0.0-alpha.4",
-    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
